crates/lexing_new/tests/snapshots/layout__ado_in.snap
---
source: crates/lexing_new/tests/layout.rs
expression: "print_tokens(&lexed, &tokens)"
snapshot_kind: text
---
module Test where{

test = ado{
  baz;
  let{ foo = bar}}
   in bar;

test = ado{} in foo;

test = ado{
  foo <- bar $ let{ a = 42} in a;
  baz <- b}
  in bar;

test = ado{
  foo;
  let{ bar = let{ a = 42} in a};
  let{ baz = 42}}
  in bar}
<eof>
