crates/lexing_new/tests/snapshots/layout__class_head.snap
---
source: crates/lexing/tests/layout.rs
expression: source
snapshot_kind: text
---
module Test where{

import Foo (class Foo);

class Foo a b c d | a -> b, c -> d where{
  foo :: Foo};

class Foo a b c d | a -> b, c -> d;

instance foo :: Foo}
<eof>
