crates/lexing_new/tests/snapshots/layout__delimiter.snap
---
source: crates/lexing/tests/layout.rs
expression: source
snapshot_kind: text
---
module Test where{

test1 = a;
test2 = {
  b
};
test3 = do{
  foo;
  bar (
    baz
  ) == 12;
  baz};
test4 = c}
<eof>
