crates/lexing_new/tests/snapshots/layout__do_let.snap
---
source: crates/lexing/tests/layout.rs
expression: source
snapshot_kind: text
---
module Test where{

test = do{
  let{ foo = bar};
  foo};

test = do{
  let{ foo = bar};
  in baz;
  foo};

test = do{
  let{ foo = bar}
    in baz;
  foo}}
<eof>
