crates/lexing_new/tests/snapshots/layout__do_operator.snap
---
source: crates/lexing/tests/layout.rs
expression: source
snapshot_kind: text
---
module Test where{

test = do{
  foo;
  foo do{
    bar}}
  <|> bar}

<eof>
