crates/lexing_new/tests/snapshots/layout__if_then_else_do.snap
---
source: crates/lexing/tests/layout.rs
expression: source
snapshot_kind: text
---
module Test where{

foo = do{
  if true then
    false
  else if false then do{
    that}
    else do{
     what};
  that}}
<eof>
